@@ -1,4 +1,4 @@
-# Port specification for the z80 port running ontop of the Java based
+# Regression test specification for the z80 target running ontop of the Java based
 # 'ConsoleZ80' emulator.
 
 RRZ80 = $(SDCC_EXTRA_DIR)/emu/rrz80/rrz80$(EXEEXT)
@@ -12,14 +12,15 @@ BINEXT = .bin
 
 # Needs parts of gbdk-lib, namely the internal mul/div/mod functions.
 EXTRAS = $(PORT_CASES_DIR)/testfwk$(OBJEXT) $(PORT_CASES_DIR)/support$(OBJEXT)
+FWKLIB = $(PORT_CASES_DIR)/statics$(OBJEXT)
 
 # Rule to generate a Emulator .bin file from the .ihx linker output.
 %$(BINEXT): %.ihx
 	$(top_builddir)/bin/makebin -s 32768 < $< > $@
 
 # Rule to link into .ihx
-%.ihx: %.c $(EXTRAS)
-	$(SDCC) $(SDCCFLAGS) $(LINKFLAGS) -L$(LIBDIR) $(EXTRAS) $< -o $@
+%.ihx: %.c $(EXTRAS) $(FWKLIB) $(PORT_CASES_DIR)/fwk.lib
+	$(SDCC) $(SDCCFLAGS) $(LINKFLAGS) -L$(LIBDIR) $(EXTRAS) $(PORT_CASES_DIR)/fwk.lib $< -o $@
 
 $(PORT_CASES_DIR)/%$(OBJEXT): $(PORTS_DIR)/$(PORT)/%.asm
 	@# TODO: sdas should place it\'s output in the current dir
@@ -35,6 +36,9 @@ $(PORT_CASES_DIR)/%$(OBJEXT): $(PORTS_DIR)/$(PORT)/%.asm
 
 $(PORT_CASES_DIR)/%$(OBJEXT): fwk/lib/%.c
 	$(SDCC) $(SDCCFLAGS) -c $< -o $@
+
+$(PORT_CASES_DIR)/fwk.lib:
+	cp $(PORTS_DIR)/$(PORT)/fwk.lib $@
 
 # PENDING: Path to sdcc-extra
 %.out: %$(BINEXT)
